[package]
name = "clickhouse-provider"
version = "0.0.1"
authors = ["Eugene The Dream"]
rust-version = "1.75.0"
edition = "2021"

[dependencies]
bigdecimal = "=0.1.0"
anyhow = "1.0.51"

openssl-probe = { version = "0.1.2" }
# futures = "0.3.5"
tokio = { version = "1.1", features = ["time", "sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tokio-retry = "0.3.0"

dotenv = "0.15.0"
tracing = "0.1.13"
tracing-subscriber = "0.2.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.6"

near-indexer = { git = "https://github.com/near/nearcore", rev = "1.39.1" }

clickhouse = "0.11.6"
reqwest = { version = "0.12.2", features = ["json"] }
base64 = "0.21.5"

ctrlc = "3.1.0"
